css/style.css
/* ... */
.slider{
    width: 100%;
    height: auto;
    display: flex;
    justify-content: center;
    
}
#img{
    width: 100%;
    height:auto;
    
   
    
}
img{
    height: 100%;
    width: 100%;

}

/*///////////////////////////////////////////////*/


/* for col-3, col-4 and col-5: */
.row {
    display: flex;
    padding: 0 4px;
}
/* for col-6, col-7  */
.row-2 {
    padding: 0 4px;
    display: flex;
}

/* for desktop:*/
.col-1 {
    width: 100%;
    border: 1% solid #fcfcfc;
}

.col-2 {
    width: 100%;
    background-color: rgb(203, 213, 223);
    border: 2px solid #ffffff;
}

.col-3 {
    flex: 1;
    background-color:  #fcfcfc;
    border: 2px solid #ffffff;
}

.col-4 {
    flex: 1;
    background-color: #fcfcfc;
    border: 2px solid #ffffff;
}

.col-4 img {
    width: 100%;
    max-width: 100%;
    border: 2px solid #ffffff;

}

.col-5 {
    flex: 1;
    background-color: #fcfcfc;
    border: 2px solid #ffffff;

}

.col-5 img {
    width: 100%;
    max-width: 100%;
    border: 2px solid #ffffff;
    

}

.col-6 {
    flex: 1;
    width: 50%;
    background-color: #fcfcfc;
    border: 2px solid #ffffff;
    text-align: center;
   
}

.col-7 {
    flex: 1;
    width: 50%;
    background-color: #fcfcfc;
    border: 2px solid #ffffff;
    text-align: center;
}

.col-8 {
    width: 100%;
    background-color: #fcfcfc;
    border: 2px solid #ffffff;

}
.col-9 {
    width: 100%;
    background-color:#fcfcfc;
    border: 2px solid #ffffff;

}

[class*="col-"] {
    float: left;
    padding: 0%;

}

.row::after {
    content: "";
    clear: both;
    display: table;
}


/*//////////////// Yleiset Dark theme koodit ///////////////////////*/
.dark-theme {
    --background-color: #333;
    --text-color: #fff;
}
.dark-theme header {
    background-color: #333;
    color: #fff;
   
}
.dark-theme .col-2{
    background-color: #333;
    color: #fff;
  
}
.dark-theme .header-text h1 {
    color: rgb(251, 251, 251);
    font-size: 4em;
    text-shadow: 2px 2px 4px #000000;
    text-align: center;
    margin: 1%;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
}
.dark-theme .header-content{
    background-color: #333;
    color: #fff;
}
.dark-theme #themeBtn {
    background-color: #f3e11d;
    color: #fff;
    border: 2px solid #fff;
}
.dark-theme .col-3{
    background-color: #333;
    color: #fff;
}
.dark-theme .col-4{
    background-color: #333;
    color: #fff;
}
.dark-theme .col-5{
    background-color: #333;
    color: #fff;
}
.dark-theme .col-6{
    background-color: #333;
    color: #fff;
}
.dark-theme .insta-name{
    background-color: #333;
    color: #fff;
}
.dark-theme .col-7{
    background-color: #333;
    color: #fff;
}
.dark-theme .col-8{
    background-color: #333;
    color: #fff;
}
.dark-theme .col-9{
    background-color: #333;
    color: #fff;
}


/* Drop down menun dark mode*/
.dark-theme .dropdown a {
    background-color: #333;
    color: #fff;
    border: 2px solid #fff;
}
.dark-theme .dropdown a:hover{
    background-color: #ffffff;
    color: #000000;
    border: 2px solid #050505;
}



/* quiz sivun dark mode*/
.dark-theme .quiz{
    background-color: #333;
    color: #fff;
}
.dark-theme form {
    background-color: #333;
    color: #fff;
    border: 2px solid #fff;
}
.dark-theme .quizSubmit {
    background-color: #333;
    color: #fff;

}


/*Galleryn dark mode*/
.dark-theme .gallery{
    background-color: #333;
    color: #f9f8f8;
    border: 2px solid #000000;
}
.dark-theme .gallery-item:hover{
    background-color: #333;
    color: #f9f8f8;
    border: 2px solid #000000;
}
.dark-theme .clickkbtn {
    background-color: #333;
    color: #fff;
    border: 2px solid #000000;
}

/*Etusivun dark mode*/

.dark-theme .link a {
    color: #100e57;
}
.dark-theme .insta-username {
    color: #100e57;
}

/* Rotutaulu dark mode*/

.dark-theme .table {
    background-color: #333;
    color: #fff;
    border: 2px solid #fff;
}
/* ... */

